force-app/main/default/objects/Lab_Order__c/Lab_Order__c.object-meta.xml
<CustomObject>
    <description>Diagnostic tests and collection tracking for patients.</description>
    <label>Lab Order</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lab Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>