force-app/main/default/objects/Lab_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
<fullName>Order_Date__c</fullName>
<label>Order Date</label>
<type>Date</type>
<required>true</required>
</CustomField>