force-app/main/default/objects/Lab_Order__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <label>Panel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HbA1c</fullName>
            </value>
            <value>
                <fullName>Fasting/PP glucose</fullName>
            </value>
            <value>
                <fullName>Lipid profile</fullName>
            </value>
            <value>
                <fullName>Kidney function</fullName>
            </value>
            <value>
                <fullName>Liver function</fullName>
            </value>
            <value>
                <fullName>TSH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>