force-app/main/default/objects/Lab_Order__c/fields/Partner_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>