force-app/main/default/objects/Lab_Order__c/fields/Report_Ready_At__c.field-meta.xml
<CustomField>
    <fullName>Report_Ready_At__c</fullName>
    <label>Report Ready</label>
    <type>DateTime</type>
</CustomField>