force-app/main/default/objects/Lab_Order__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Slot</label>
    <type>DateTime</type>
</CustomField>