force-app/main/default/objects/Lab_Order__c/fields/Test_Type__c.field-meta.xml
<CustomField>
<fullName>Test_Type__c</fullName>
<label>Test Type</label>
<type>Text</type>
<required>true</required>
<length>255</length>
</CustomField>