force-app/main/default/objects/Lab_Order__c/fields/Timepoint__c.field-meta.xml
<CustomField>
    <fullName>Timepoint__c</fullName>
    <label>Timepoint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Day 80-90</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>